cluster/apps/librechat/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librechat
  namespace: librechat
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - "ai.mert574.dev"
    - "librechat.k3s.internal"
  rules:
    - backendRefs:
        - name: librechat
          port: 3080
